[project]
name = "llamaindex-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jieba>=0.42.1",
    "llama-index>=0.14.22",
    "llama-index-embeddings-dashscope>=0.5.0",
    "llama-index-llms-dashscope>=0.6.1",
    "rank-bm25>=0.2.2",
]
